--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.0",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-component": "^1.1.1",
     "element-ui": "^2.13.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
